fix mobile overflow on about page

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -40,7 +40,7 @@
 
 @media (max-width: 1000px) {
     .profile {
-        width: 500px;
+        width: auto;
     }
 
     .profile .imgContainer {
